--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongoose": "^4.10.4"
+    "moment": "^2.18.1",
+    "mongoose": "^4.10.4",
+    "q": "^1.5.0"
   }
 }
